# rules_multirun

./: BUILD  MODULE.bazel  multirun.bzl
internal/: BUILD  multirun.py
