module(
    name = "rules_multirun",
    version = "0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_features", version = "1.18.0")
bazel_dep(name = "rules_shell", version = "0.4.0")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_python", version = "0.36.0")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "aspect_bazel_lib", version = "2.15.3")

bazel_dep(
    name = "stardoc",
    version = "0.7.1",
    dev_dependency = True,
    repo_name = "io_bazel_stardoc",
)
